force-app/main/default/objects/Helper__c/Helper__c.object-meta.xml
<CustomObject>
    <label>Helper</label>
    <nameField>
        <label>Helper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>