force-app/main/default/objects/Helper__c/fields/IsEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmployee</label>
    <type>Checkbox</type>
</CustomField>