force-app/main/default/objects/Helper__c/fields/KeeperId__c.field-meta.xml
<CustomField>
    <fullName>KeeperId__c</fullName>
    <label>KeeperId</label>
    <length>48</length>
    <type>Text</type>
</CustomField>