force-app/main/default/objects/Helper__c/fields/Selector__c.field-meta.xml
<CustomField>
    <fullName>Selector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selector</label>
    <type>Checkbox</type>
</CustomField>